--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.3.16"
+    "mongoose": "^5.3.16",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
