styled the drop down a bit, added a uuid to the notifications.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.3.16",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "uuid": "^3.3.3"
   }
 }
