--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.1",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
   },
