--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.1",
+    "react-media": "^1.10.0",
     "react-moment": "^0.9.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
